--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,30 @@ are being added. Very soon now, the next stable GIMP release, GIMP 2.2,
 will emerge out of this.
 
 
+Overview of Changes in GIMP 2.1.5
+=================================
+
+- Ask the user to save the image when closing the last display.
+
+- Restored compatibility of the wire protocol that was accidentally
+  broken in 2.1.4.
+
+- Added layer and mask actions to allow for more keybindings.
+
+- Preview widget improvements:
+   * let the preview expand with the plug-in dialog
+   * added a navigation popup similar to the one in the image window
+   * respect the selection and show how it will affect the filter
+
+- Added preview to more plug-ins: Cartoon, Apply Canvas, Photocopy,
+  Motion Blur,
+
+Contributors:
+
+   Michael Natterer, Sven Neumann, David Odin, Manish Singh, Simon
+   Budig, Nathan Summers, Alan Horkan, David Gowers, Bill Skaggs
+
+
 
 Overview of Changes in GIMP 2.1.4
 =================================
