--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/pdb/procedural_db.c: removed #if 0'ed code, took assignments
+	out of if()-conditions, minor cleanup.
+
 2004-09-16  Simon Budig  <simon@gimp.org>
 
 	* app/core/gimpscanconvert.c: Implemented an own rendering
