2004-09-16  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcomponenteditor.[ch]: set the viewable
	renderer's "renderer" property to NULL when clearing the
	view to work around bug #149906.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14744 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpcomponenteditor.[ch]: set the viewable
+	renderer's "renderer" property to NULL when clearing the
+	view to work around bug #149906.
+
 2004-09-16  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpscanconvert.c (VALUE_TO_PIXEL): replaced a bitshift
