2004-09-16  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpwidgets.c (gimp_scale_entry_set_logarithmic):
	applied a patch by Joao S. O. Bueno that fixes bug #152820.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14749 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-16  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpwidgets.c (gimp_scale_entry_set_logarithmic):
+	applied a patch by Joao S. O. Bueno that fixes bug #152820.
+
 2004-09-16  Dave Neary  <bolsh@gimp.org>
 
 	* plug-ins/script-fu/scripts/burn-in-anim.scm: patch from Kevin 
