--- a/INSTALL
+++ b/INSTALL
@@ -25,11 +25,12 @@ header files installed.
   1. You need to have installed a recent version of pkg-config available
      from http://www.freedesktop.org/software/pkgconfig/.  
 
-  2. You need to have installed GTK+ version 2.4.1 or better. Do not
+  2. You need to have installed GTK+ version 2.4.4 or better. Do not
      try to use an older GTK+ version (1.2.x), it will not work.
-     GTK+ itself needs recent versions of GLib, Pango and ATK.
-     Sources for these can be grabbed from ftp://ftp.gtk.org/.
-     GTK+-2.x and friends can be installed side by side with GTK+-1.2.
+     GTK+ itself needs recent versions of GLib (>= 2.4.5),
+     Pango (>= 1.4.0) and ATK. Sources for these can be grabbed from
+     ftp://ftp.gtk.org/. GTK+-2.x and friends can be installed side
+     by side with GTK+-1.2.
 
   3. We require PangoFT2, a Pango backend that uses FreeType2. Make sure 
      you have FreeType2 and fontconfig installed before you compile Pango.
@@ -259,7 +260,7 @@ before you run configure.
 
 * If the check for gimpprint fails even though you have version 4.2.x
   installed, please try the latest available 4.2 package (which is
-  gimp-print 4.2.7-pre1 at the time of this writing).
+  gimp-print 4.2.7 at the time of this writing).
 
 
       Generic Instructions for Building Auto-Configured Packages
