2004-09-17  Sven Neumann  <sven@gimp.org>
	* app/core/gimp-edit.c (gimp_edit_paste): based on a patch from
	Joao S. O. Bueno: Ensure that the pasted layer is always within
	the image, if it fits and aligned at top left if it doesn't.
	Fixes bug #142944.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14751 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-17  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimp-edit.c (gimp_edit_paste): based on a patch from
+	Joao S. O. Bueno: Ensure that the pasted layer is always within
+	the image, if it fits and aligned at top left if it doesn't.
+	Fixes bug #142944.
+
 2004-09-16  Sven Neumann  <sven@gimp.org>
 
 	* INSTALL: updated.
