2004-09-17  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcomponenteditor.c
	(gimp_component_editor_renderer_update): use
	gimp_component_editor_get_iter() instead of duplicating its code.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14753 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-17  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpcomponenteditor.c
+	(gimp_component_editor_renderer_update): use
+	gimp_component_editor_get_iter() instead of duplicating its code.
+
 2004-09-17  Simon Budig  <simon@gimp.org>
 
 	* app/widgets/gimpbrusheditor.[ch]: Added a slider for the
