2004-09-18  Manish Singh  <yosh@gimp.org>
        * app/Makefile.am: remove LDFLAGS references to now private
        file_open_dialog_show, file_open_location_dialog_show, and
        file_save_dialog_show.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14756 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-18  Manish Singh  <yosh@gimp.org>
+
+	* app/Makefile.am: remove LDFLAGS references to now private
+	file_open_dialog_show, file_open_location_dialog_show, and
+	file_save_dialog_show.
+
 2004-09-18  Sven Neumann  <sven@gimp.org>
 
 	* app/actions/qmask-commands.c
