--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,11 @@
+2004-09-18  Sven Neumann  <sven@gimp.org>
+
+	* app/Makefile.am (unused_symbols): synced with toplevel
+	app/Makefile.am
+
+	* app/app-docs.sgml
+	* app/app-sections.txt: updated.
+
 2004-09-14  Michael Natterer  <mitch@gimp.org>
 
 	* app/Makefile.am
