--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-18  Simon Budig  <simon@gimp.org>
+
+	* libgimpwidgets/gimpcolorhexentry.c: Removed check for len % 3 == 0,
+	so that the entry accepts hex colors starting with "#" again.
+	Untabbified.
+
 2004-09-18  Manish Singh  <yosh@gimp.org>
 
 	* app/Makefile.am: remove LDFLAGS references to now private
