--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-19  Sven Neumann  <sven@gimp.org>
+
+	* libgimpcolor/gimprgb-parse.c (gimp_rgb_parse_hex): fixed gtk-doc
+	comment.
+
 2004-09-18  Simon Budig  <simon@gimp.org>
 
 	* libgimpwidgets/gimpcolorhexentry.c: Removed check for len % 3 == 0,
