2004-09-19  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimperrordialog.c (gimp_error_dialog_add): fixed
	handling of too many error messages.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14762 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-19  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimperrordialog.c (gimp_error_dialog_add): fixed
+	handling of too many error messages.
+
+2004-09-19  Sven Neumann  <sven@gimp.org>
+
 	Try to make floating selections more obvious:
 
 	* app/widgets/gimplayertreeview.c
