Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* app/tools/gimppaintoptions-gui.c: rearrange tool options as
	described in bug #153014.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14763 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-19  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* app/tools/gimppaintoptions-gui.c: rearrange tool options as 
+	described in bug #153014.
+
 2004-09-19  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimperrordialog.c (gimp_error_dialog_add): fixed
