2004-09-19  Sven Neumann  <sven@gimp.org>
	* app/dialogs/Makefile.am (libappdialogs_a_SOURCES): added authors.h.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14764 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-19  Sven Neumann  <sven@gimp.org>
+
+	* app/dialogs/Makefile.am (libappdialogs_a_SOURCES): added authors.h.
+
 2004-09-19  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* app/tools/gimppaintoptions-gui.c: rearrange tool options as 
