Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* app/tools/gimppaintoptions-gui.c: clean up ugliness introduced
	by my previous commit -- no functional change.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14766 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-19  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* app/tools/gimppaintoptions-gui.c: clean up ugliness introduced
+	by my previous commit -- no functional change.
+
 2004-09-19  Sven Neumann  <sven@gimp.org>
 
 	Improved undo memory calculation for paint operations (bug #153035):
