* plug-ins/common/bumpmap.c: use a GimpDrawablePreview instead of a   very complicated homemade preview.  Many small changes in the code   too, and some cleanups. I hope I didn't break anything.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14767 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-19  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/bumpmap.c: use a GimpDrawablePreview instead of a
+	very complicated homemade preview.  Many small changes in the code
+	too, and some cleanups. I hope I didn't break anything.
+
 2004-09-19  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* app/tools/gimppaintoptions-gui.c: clean up ugliness introduced
