--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-19  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/bumpmap.c: some tweaks to the dialog layout.
+
 2004-09-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/qmask-commands.c (qmask_invert_cmd_callback): is a
