2004-09-19  Sven Neumann  <sven@gimp.org>
	* app/base/tile-manager.c (tile_manager_get_memsize): count valid
	tiles, not dirty ones.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14771 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-19  Sven Neumann  <sven@gimp.org>
 
+	* app/base/tile-manager.c (tile_manager_get_memsize): count valid
+	tiles, not dirty ones.
+
+2004-09-19  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/bumpmap.c: some tweaks to the dialog layout.
 
 2004-09-19  Michael Natterer  <mitch@gimp.org>
