2004-09-20  Michael Natterer  <mitch@gimp.org>
	* app/actions/channels-commands.c
	* app/actions/vectors-commands.c: removed massive code duplication
	by factoring out the code that creates the "New Channel/Path" and
	"Edit Channel/Path Attributes" dialogs out to utility functions.
	GUI spacing and Code cleanup.

	* app/actions/layers-commands.c: minor GUI spacing and code
	cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14773 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-09-20  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/channels-commands.c
+	* app/actions/vectors-commands.c: removed massive code duplication
+	by factoring out the code that creates the "New Channel/Path" and
+	"Edit Channel/Path Attributes" dialogs out to utility functions.
+	GUI spacing and Code cleanup.
+
+	* app/actions/layers-commands.c: minor GUI spacing and code
+	cleanup.
+
 2004-09-19  Sven Neumann  <sven@gimp.org>
 
 	* app/base/tile-manager.c (tile_manager_get_memsize): count valid
