2004-09-20  Michael Natterer  <mitch@gimp.org>
	* app/Makefile.am (gimp_2_1_LDFLAGS): removed all -u hacks.

	(gimp_2_1_LDADD)
	(gimp_console_2_1_LDADD): reordered .a files correctly. The core
	seems to be cleaned up enough to have proper dependencies now.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14774 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-09-20  Michael Natterer  <mitch@gimp.org>
 
+	* app/Makefile.am (gimp_2_1_LDFLAGS): removed all -u hacks.
+
+	(gimp_2_1_LDADD)
+	(gimp_console_2_1_LDADD): reordered .a files correctly. The core
+	seems to be cleaned up enough to have proper dependencies now.
+
+2004-09-20  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/channels-commands.c
 	* app/actions/vectors-commands.c: removed massive code duplication
 	by factoring out the code that creates the "New Channel/Path" and
