2004-09-20  Michael Natterer  <mitch@gimp.org>
	* app/Makefile.am (GTKDOC_LIBS): removed same linker hacks
	as in app/Makefile.am.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14775 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-20  Michael Natterer  <mitch@gimp.org>
+
+	* app/Makefile.am (GTKDOC_LIBS): removed same linker hacks
+	as in app/Makefile.am.
+
 2004-09-18  Sven Neumann  <sven@gimp.org>
 
 	* app/Makefile.am (unused_symbols): synced with toplevel
