2004-09-20  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpcolorselect.c (gimp_color_select_xy_events):
	removed "case GDK_CONFIGURE" because it's not needed and did
	"break" instead of "return FALSE", causing random color changes
	when resizing and initially showing the widget.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14779 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-20  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimpcolorselect.c (gimp_color_select_xy_events):
+	removed "case GDK_CONFIGURE" because it's not needed and did
+	"break" instead of "return FALSE", causing random color changes
+	when resizing and initially showing the widget.
+
 2004-09-20  Sven Neumann  <sven@gimp.org>
 
 	* Made 2.1.5 release.
