* plug-ins/common/shift.c: added a preview.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14780 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-20  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/shift.c: added a preview.
+
 2004-09-20  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcolorselect.c (gimp_color_select_xy_events):
