--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-20  DindinX  <dindinx@gimp.org>
 
+	* plug-ins/common/deinterlace.c: added a preview. Not sure if it is
+	really useful...
+
+2004-09-20  DindinX  <dindinx@gimp.org>
+
 	* plug-ins/common/shift.c: added a preview.
 
 2004-09-20  Michael Natterer  <mitch@gimp.org>
