2004-09-20  Sven Neumann  <sven@gimp.org>
	* configure.in: bumped version number to 2.1.6.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14782 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-20  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: bumped version number to 2.1.6.
+
 2004-09-20  DindinX  <dindinx@gimp.org>
 
 	* plug-ins/common/deinterlace.c: added a preview. Not sure if it is
