2004-09-20  Michael Natterer  <mitch@gimp.org>
	* app/dialogs/dialogs.[ch] (dialogs_init): added GimpMenuFactory
	parameter and removed inclusion on "menus/menus.h".

	* app/menus/menus.[ch] (menus_init): added GimpActionFactory
	parameter and removed inclusion of "actions/actions.h".

	* app/gui/gui.c (gui_restore_callback): pass the factories to the
	above functions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14783 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-09-20  Michael Natterer  <mitch@gimp.org>
+
+	* app/dialogs/dialogs.[ch] (dialogs_init): added GimpMenuFactory
+	parameter and removed inclusion on "menus/menus.h".
+
+	* app/menus/menus.[ch] (menus_init): added GimpActionFactory
+	parameter and removed inclusion of "actions/actions.h".
+
+	* app/gui/gui.c (gui_restore_callback): pass the factories to the
+	above functions.
+
 2004-09-20  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped version number to 2.1.6.
