2004-09-20  Michael Natterer  <mitch@gimp.org>
	* app/actions/buffers-commands.c
	* app/actions/file-commands.c
	* app/actions/layers-commands.c
	* app/actions/plug-in-actions.c
	* app/actions/tools-actions.c: removed useless #includes, cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14784 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-09-20  Michael Natterer  <mitch@gimp.org>
 
+	* app/actions/buffers-commands.c
+	* app/actions/file-commands.c
+	* app/actions/layers-commands.c
+	* app/actions/plug-in-actions.c
+	* app/actions/tools-actions.c: removed useless #includes, cleanup.
+
+2004-09-20  Michael Natterer  <mitch@gimp.org>
+
 	* app/dialogs/dialogs.[ch] (dialogs_init): added GimpMenuFactory
 	parameter and removed inclusion on "menus/menus.h".
 
