2004-09-20  Michael Natterer  <mitch@gimp.org>
	* app/dialogs/dialogs-constructors.c: removed useless #includes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14785 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-20  Michael Natterer  <mitch@gimp.org>
 
+	* app/dialogs/dialogs-constructors.c: removed useless #includes.
+
+2004-09-20  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/buffers-commands.c
 	* app/actions/file-commands.c
 	* app/actions/layers-commands.c
