--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-20  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/bumpmap.c: added tooltips, enabled "Compensate
+	for darkening" by default, some minor cleanups.
+
 2004-09-20  Michael Natterer  <mitch@gimp.org>
 
 	* app/dialogs/dialogs-constructors.c: removed useless #includes.
