--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-09-20  Maurits Rijk  <m.rijk@chello.nl>
+
+	* plug-ins/imagemap/imap_cmd_guides.c 
+	* plug-ins/imagemap/imap_default_dialog.c 
+	* plug-ins/imagemap/imap_menu.c
+	* plug-ins/imagemap/imap_preferences.c 
+	* plug-ins/imagemap/imap_tools.c: disabled functionality that doesn't
+	fully work yet. #136713 now becomes an enhancement request.
+
 2004-09-20  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/bumpmap.c: added tooltips, enabled "Compensate
