2004-09-21  Dave Neary  <bolsh@gimp.org>
	* plug-ins/common/psd.c: Correctly set overlay, hard light and
	soft light modes from .psd files. Fixes bug #153229.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14789 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-21  Dave Neary  <bolsh@gimp.org>
+
+	* plug-ins/common/psd.c: Correctly set overlay, hard light and 
+	soft light modes from .psd files. Fixes bug #153229.
+
 2004-09-21  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/svg.c (SVG_DEFAULT_RESOLUTION): set to 90dpi as
