2004-09-21  Sven Neumann  <sven@gimp.org>
	* app/display/gimpdisplayshell-close.c
	(gimp_display_shell_close_dialog): resolved a mnemonics collision.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14791 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-21  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-close.c
+	(gimp_display_shell_close_dialog): resolved a mnemonics collision.
+
 2004-09-21  Dave Neary  <bolsh@gimp.org>
 
 	* plug-ins/common/psd.c: Correctly set overlay, hard light and 
