2004-09-21  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/jpeg.c (save_dialog): let the dialog collapse
	with the expander by making it not resizable.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14792 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-21  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/jpeg.c (save_dialog): let the dialog collapse
+	with the expander by making it not resizable.
+
+2004-09-21  Sven Neumann  <sven@gimp.org>
+
 	* app/display/gimpdisplayshell-close.c
 	(gimp_display_shell_close_dialog): resolved a mnemonics collision.
 
