2004-09-21  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/script-fu-server.c: got rid of two the global
	file descriptor sets. Use the client hash-table instead.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14795 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-21  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu-server.c: got rid of two the global
+	file descriptor sets. Use the client hash-table instead.
+
+2004-09-21  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/script-fu-server.c: enabled build of the
 	Script-Fu server for the Win32 platform using the winsock API.
 
