2004-09-21  Sven Neumann  <sven@gimp.org>
	* data/images/Makefile.am (imagedata_DATA): renamed gimp_splash.png
	to gimp-splash.png.

	* data/images/gimp-splash.png: new splash, courtesy of Dave Neary.

	* app/gui/splash.c: look for gimp-splash.png in the users
	directory, then in the systemwide images directory.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14796 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-09-21  Sven Neumann  <sven@gimp.org>
 
+	* data/images/Makefile.am (imagedata_DATA): renamed gimp_splash.png
+	to gimp-splash.png.
+
+	* data/images/gimp-splash.png: new splash, courtesy of Dave Neary.
+
+	* app/gui/splash.c: look for gimp-splash.png in the users
+	directory, then in the systemwide images directory.
+
+2004-09-21  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/script-fu-server.c: got rid of two the global
 	file descriptor sets. Use the client hash-table instead.
 
