2004-09-21  Michael Natterer  <mitch@gimp.org>
	* app/actions/file-actions.c (file_actions): resolved conflicting
	mnemonics.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14797 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-21  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/file-actions.c (file_actions): resolved conflicting
+	mnemonics.
+
 2004-09-21  Sven Neumann  <sven@gimp.org>
 
 	* data/images/Makefile.am (imagedata_DATA): renamed gimp_splash.png
