--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-22  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/bumpmap.c: moved the preview to the left.
+
 2004-09-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/plug-in-types.h
