--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-09-22  Michael Natterer  <mitch@gimp.org>
+
+	Prepare for enabling private contexts for plug-ins and scripts:
+
+	* app/plug-in/plug-in.[ch]: removed the "context" member from
+	the PlugIn struct and added it to PlugInProcFrame instead. 
+
+	* app/plug-in/plug-in-message.c
+	* app/plug-in/plug-in-progress.c
+	* app/plug-in/plug-in-run.c: changed accordingly.
+
 2004-09-22  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/bumpmap.c: moved the preview to the left.
@@ -5,7 +16,6 @@
 2004-09-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/plug-in-types.h
-
 	* app/plug-in/plug-in.[ch]: added struct PlugInProcFrame which
 	contains the ProcRecord, the proc's GMainLoop and its return
 	values.
